added data-attr for js hadles

--- a/files for admin/company.phtml
+++ b/files for admin/company.phtml
@@ -1,4 +1,4 @@
-<div class="company-page" data-mage-init='{"slickCompanyPage" : {}}'>
+<div class="company-page" data-mage-init='{"slickCompanyPage" : {}, "companyPage" : {} }'>
     <div class="company-page__container _container">
         <div class="company-page__top">
             <h2 class="company-page__title">We are a team of international experts united by a <span class="company-page__title--orange">single goal</span></h2>
@@ -185,23 +185,27 @@
                     <h5 class="company-team__sub-title _text-align-right">Experts in their respective fields and a truly stellar team of executives that work hard every day to ensure that the Сompany offers the best services in industry. Team growth and implementation of best practices is what the guys do every day.</h5>
                     <div class="company-team__gallery team-gallery">
                         <div class="team-gallery__col">
-                            <div class="team-gallery__person">
-                                <div class="team-gallery__photo">
-                                    <img loading="lazy" src="{{media url='wysiwyg/company/Mik.png'}}" alt="Mikhail">
-                                </div>
-                                <div class="team-gallery__label team-gallery__label--mik photo-label">
-                                    <div class="photo-label__name">Mikhail Knyr</div>
-                                    <div class="photo-label__position">Partner</div>
+                            <div class="team-gallery__person" data-container-pos="1">
+                                <div data-pos-desktop="1" data-pos-mobile="2">
+                                    <div class="team-gallery__photo">
+                                        <img loading="lazy" src="{{media url='wysiwyg/company/Mik.png'}}" alt="Mikhail">
+                                    </div>
+                                    <div class="team-gallery__label team-gallery__label--mik photo-label">
+                                        <div class="photo-label__name">Mikhail Knyr</div>
+                                        <div class="photo-label__position">Partner</div>
+                                    </div>
                                 </div>
                             </div>
 
-                            <div class="team-gallery__person">
-                                <div class="team-gallery__photo">
-                                    <img loading="lazy" src="{{media url='wysiwyg/company/Al.png'}}" alt="Alyona">
-                                </div>
-                                <div class="team-gallery__label team-gallery__label--ale photo-label">
-                                    <div class="photo-label__name">Alena Karasevich</div>
-                                    <div class="photo-label__position">HR Lead</div>
+                            <div class="team-gallery__person" data-container-pos="2">
+                                <div data-pos-desktop="2" data-pos-mobile="4">
+                                    <div class="team-gallery__photo">
+                                        <img loading="lazy" src="{{media url='wysiwyg/company/Al.png'}}" alt="Alyona">
+                                    </div>
+                                    <div class="team-gallery__label team-gallery__label--ale photo-label">
+                                        <div class="photo-label__name">Alena Karasevich</div>
+                                        <div class="photo-label__position">HR Lead</div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -216,24 +220,28 @@
                                 </div>
                             </div>
 
-                            <div class="team-gallery__person">
-                                <div class="team-gallery__photo">
-                                    <img loading="lazy" src="{{media url='wysiwyg/company/Nat.png'}}" alt="Natalya">
-                                </div>
-                                <div class="team-gallery__label team-gallery__label--nata photo-label">
-                                    <div class="photo-label__name">Natalya Stupakova</div>
-                                    <div class="photo-label__position">FN Lead</div>
+                            <div class="team-gallery__person" data-container-pos="4">
+                                <div data-pos-desktop="4" data-pos-mobile="5">
+                                    <div class="team-gallery__photo">
+                                        <img loading="lazy" src="{{media url='wysiwyg/company/Nat.png'}}" alt="Natalya">
+                                    </div>
+                                    <div class="team-gallery__label team-gallery__label--nata photo-label">
+                                        <div class="photo-label__name">Natalya Stupakova</div>
+                                        <div class="photo-label__position">FN Lead</div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="team-gallery__col">
-                            <div class="team-gallery__person team-gallery__person--art">
-                                <div class="team-gallery__photo">
-                                    <img loading="lazy" src="{{media url='wysiwyg/company/Art.png'}}" alt="Artur">
-                                </div>
-                                <div class="team-gallery__label team-gallery__label--art photo-label">
-                                    <div class="photo-label__name">Artur Potulny</div>
-                                    <div class="photo-label__position">CEO</div>
+                            <div class="team-gallery__person team-gallery__person--art" data-container-pos="5">
+                                <div data-pos-desktop="5" data-pos-mobile="1">
+                                    <div class="team-gallery__photo">
+                                        <img loading="lazy" src="{{media url='wysiwyg/company/Art.png'}}" alt="Artur">
+                                    </div>
+                                    <div class="team-gallery__label team-gallery__label--art photo-label">
+                                        <div class="photo-label__name">Artur Potulny</div>
+                                        <div class="photo-label__position">CEO</div>
+                                    </div>
                                 </div>
                             </div>
 
