fixes on main and works pages

--- a/files for admin/main.phtml
+++ b/files for admin/main.phtml
@@ -821,8 +821,8 @@
 
                 <div class="comments__content">
                     <ul class="comments__list">
-                        <!-- Book -->
-                        <div class="comments__item comment">
+                         <!-- Vodafone -->
+                         <div class="comments__item comment">
                             <div class="comment__header">
                                 <div class="comment__icon">
                                     <img loading="lazy" src="{{media url='wysiwyg/Main/message/Group.png'}}" alt="C " />
@@ -847,16 +847,16 @@
                             <div class="comment__body">
                                 <div class="comment__author comment-author">
                                     <div class="comment-author__name">
-                                        Book Company
+                                        Vitaly Zadorin
                                     </div>
                                     <div class="comment-author__post">
-                                        Owner
+                                        Product Owner, Vodafone Ukraine
                                     </div>
                                 </div>
 
                                 <div class="comment__text">
                                     <p>
-                                        Perspective successfully finished the client's platform, and they were able to accomplish all of their tasks. They had exceptional Magento skills, and they were able to solve all of the project's issues. The team was also commended for their organized and meticulous approach.
+                                        The project launched just in time for a big shopping event and the company saw firsthand how well it worked under high traffic. The team used a variety of tools for development and communication with the company.
                                     </p>
                                 </div>
                             </div>
@@ -941,7 +941,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Vodafone -->
+                        <!-- Book -->
                         <div class="comments__item comment">
                             <div class="comment__header">
                                 <div class="comment__icon">
@@ -967,16 +967,16 @@
                             <div class="comment__body">
                                 <div class="comment__author comment-author">
                                     <div class="comment-author__name">
-                                        Vitaly Zadorin
+                                        Basement Books
                                     </div>
                                     <div class="comment-author__post">
-                                        Product Owner, Vodafone Ukraine
+                                        Stuart Hutchinson
                                     </div>
                                 </div>
 
                                 <div class="comment__text">
                                     <p>
-                                        The project launched just in time for a big shopping event and the company saw firsthand how well it worked under high traffic. The team used a variety of tools for development and communication with the company.
+                                        Perspective successfully finished the client's platform, and they were able to accomplish all of their tasks. They had exceptional Magento skills, and they were able to solve all of the project's issues. The team was also commended for their organized and meticulous approach.
                                     </p>
                                 </div>
                             </div>
