--- a/files for admin/works.phtml
+++ b/files for admin/works.phtml
@@ -2,98 +2,155 @@
     <div class="work-page__container _container">
         <h2 class="work-page__title">best-in-class <br/> eCommerce solutions</h2>
         <h4 class="work-page__sub-title">Our passion lies in making complex things simple. We design and build websites,<br/> e-commerce stores for some of the largest organisations in the world.</h4>
-        <div class="work-page__row">
-            <div class="row__img work-page__image"><img loading="lazy" src="{{media url="wysiwyg/work/vodafone_banner.png"}}" alt=""></div>
+        
+        <a class="work-page__row" href="https://www.vodafone.ua/shop/" target="_blank">
+            <div class="row__img work-page__image">
+                <img loading="lazy" src="{{media url="wysiwyg/work/vodafone_banner.png"}}" alt="">
+            </div>
             <div class="work-page__info">
                 <h4 class="_h4">
                     Vodafone
-                    <a target="_blank" href="" class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></a>
+                    <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
                 </h4>
                 <h5>Online store of the leading mobile operator Vodafone Ukraine, which serves more than 19 million subscribers.</h5>
                 <p class="work-page__small-text">Development, integrations, support</p>
-                <a target="_blank" href="" class="work-page__link-desktop _link-www-icon"></a>
+                <i class="work-page__link-desktop _link-www-icon"></i>
             </div>
-        </div>
-        <div class="work-page__dual-top">
-            <div class="dual-top__img work-page__image"><img loading="lazy" src="{{media url="wysiwyg/work/ortileb_banner.png"}}" alt=""></div>
+        </a>
+
+        <a class="work-page__dual-top" href="https://www.ortlieb.com/" target="_blank">
+            <div class="dual-top__img work-page__image">
+                <img loading="lazy" src="{{media url="wysiwyg/work/ortileb_banner.png"}}" alt="">
+            </div>
             <div class="work-page__info">
-                <h4 class="_h4">Ortlieb<a target="_blank" href="" class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></a></h4>
+                <h4 class="_h4">
+                    Ortlieb
+                    <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
+                </h4>
                 <h5>Online store of the the world’s leading brand of waterproof premium equipment.</h5>
                 <p class="work-page__small-text">Development, integrations, support</p>
-                <a target="_blank" href="" class="work-page__link-desktop _link-www-icon"></a>
+                <i class="work-page__link-desktop _link-www-icon"></i>
             </div>
-        </div>
-        <div class="work-page__dual-bottom">
-            <div class="dual-bottom__img work-page__image"><img loading="lazy" src="{{media url="wysiwyg/work/dr_berg_banner.png"}}" alt=""></div>
+        </a>
+
+        <a class="work-page__dual-bottom" href="https://shop.drberg.com/" target="_blank">
+            <div class="dual-bottom__img work-page__image">
+                <img loading="lazy" src="{{media url="wysiwyg/work/dr_berg_banner.png"}}" alt="" />
+            </div>
             <div class="work-page__info">
-                <h4 class="_h4">Dr.Berg<a target="_blank" href="" class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></a></h4>
+                <h4 class="_h4">
+                    Dr.Berg
+                    <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
+                </h4>
                 <h5>Online store of the leading mobile operator Vodafone Ukraine, which serves more than 19 million subscribers.</h5>
                 <p class="work-page__small-text">Development, integrations, support</p>
-                <a target="_blank" href="" class="work-page__link-desktop _link-www-icon"></a>
+                <i class="work-page__link-desktop _link-www-icon"></i>
             </div>
-        </div>
-        <div class="work-page__row-reverse">
-            <div class="row-reverse__img work-page__image"><img loading="lazy" src="{{media url="wysiwyg/work/tefal_banner.png"}}" alt=""></div>
+        </a>
+
+        <a class="work-page__row-reverse" href="https://shop.tefal.ua/" target="_blank">
+            <div class="row-reverse__img work-page__image">
+                <img loading="lazy" src="{{media url="wysiwyg/work/tefal_banner.png"}}" alt="" />
+            </div>
             <div class="work-page__info">
-                <h4 class="_h4">Tefal<a target="_blank" href="" class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></a></h4>
+                <h4 class="_h4">
+                    Tefal
+                    <i  class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
+                </h4>
                 <h5>official online store of the international brand under which household appliances and dishes are produced</h5>
                 <p class="work-page__small-text">Design, development, integrations, support</p>
-                <a target="_blank" href="" class="work-page__link-desktop _link-www-icon"></a>
+                <i  class="work-page__link-desktop _link-www-icon"></i>
             </div>
-        </div>
-        <div class="work-page__dual-top-reverse">
-            <div class="dual-top-reverse__img work-page__image"><img loading="lazy" src="{{media url="wysiwyg/work/krups_banner.png"}}" alt=""></div>
+        </a>
+
+        <a class="work-page__dual-top-reverse" href="https://www.krups.ua/" target="_blank">
+            <div class="dual-top-reverse__img work-page__image">
+                <img loading="lazy" src="{{media url="wysiwyg/work/krups_banner.png"}}" alt="">
+            </div>
             <div class="work-page__info">
-                <h4 class="_h4">Krups<a target="_blank" href="" class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></a></h4>
+                <h4 class="_h4">
+                    Krups
+                    <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
+                </h4>
                 <h5>Official online store of the international brand under which household appliances and dishes are produced</h5>
                 <p class="work-page__small-text">Design, development, integrations, support</p>
-                <a target="_blank" href="" class="work-page__link-desktop _link-www-icon"></a>
+                <i class="work-page__link-desktop _link-www-icon"></i>
             </div>
-        </div>
-        <div class="work-page__dual-bottom-reverse">
-            <div class="dual-bottom-reverse__img work-page__image"><img loading="lazy" src="{{media url="wysiwyg/work/soundmag_banner.png"}}" alt=""></div>
+        </a>
+
+        <a class="work-page__dual-bottom-reverse" href="https://soundmag.ua/" target="_blank">
+            <div class="dual-bottom-reverse__img work-page__image">
+                <img loading="lazy" src="{{media url="wysiwyg/work/soundmag_banner.png"}}" alt="">
+            </div>
             <div class="work-page__info">
-                <h4 class="_h4">Soundmag<a target="_blank" href="" class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></a></h4>
+                <h4 class="_h4">
+                    Soundmag
+                    <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
+                </h4>
                 <h5>Online store and the first salon of personal audio</h5>
                 <p class="work-page__small-text">Design, development, integrations, support</p>
-                <a target="_blank" href="" class="work-page__link-desktop _link-www-icon"></a>
+                <i class="work-page__link-desktop _link-www-icon"></i>
             </div>
-        </div>
-        <div class="work-page__row">
-            <div class="row__img work-page__image"><img loading="lazy" src="{{media url="wysiwyg/work/wmf_banner.png"}}" alt=""></div>
+        </a>
+
+        <a class="work-page__row" href="https://www.wmf.ua/" target="_blank">
+            <div class="row__img work-page__image">
+                <img loading="lazy" src="{{media url="wysiwyg/work/wmf_banner.png"}}" alt="">
+            </div>
             <div class="work-page__info">
-                <h4 class="_h4">WMF<a target="_blank" href="" class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></a></h4>
+                <h4 class="_h4">
+                    WMF
+                    <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
+                </h4>
                 <h5>Online store of the leading mobile operator Vodafone Ukraine, which serves more than 19 million subscribers.</h5>
                 <p class="work-page__small-text">Development, integrations, support</p>
-                <a target="_blank" href="" class="work-page__link-desktop _link-www-icon"></a>
+                <i class="work-page__link-desktop _link-www-icon"></i>
             </div>
-        </div>
-        <div class="work-page__dual-top">
-            <div class="dual-top__img work-page__image"><img loading="lazy" src="{{media url="wysiwyg/work/rowenta_banner.png"}}" alt=""></div>
+        </a>
+
+        <a class="work-page__dual-top" href="https://www.rowenta.ua/" target="_blank">
+            <div class="dual-top__img work-page__image">
+                <img loading="lazy" src="{{media url="wysiwyg/work/rowenta_banner.png"}}" alt="">
+            </div>
             <div class="work-page__info">
-                <h4 class="_h4">Rowenta<a target="_blank" href="" class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></a></h4>
+                <h4 class="_h4">
+                    Rowenta
+                    <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
+                </h4>
                 <h5>Online store of the the world’s leading brand of waterproof premium equipment.</h5>
                 <p class="work-page__small-text">Development, integrations, support</p>
-                <a target="_blank" href="" class="work-page__link-desktop _link-www-icon"></a>
+                <i class="work-page__link-desktop _link-www-icon"></i>
             </div>
-        </div>
-        <div class="work-page__dual-bottom">
-            <div class="dual-bottom__img work-page__image"><img loading="lazy" src="{{media url="wysiwyg/work/chicco_banner.png"}}" alt=""></div>
+        </a>
+
+        <a class="work-page__dual-bottom" href="https://chicco.com.ua/" target="_blank">
+            <div class="dual-bottom__img work-page__image">
+                <img loading="lazy" src="{{media url="wysiwyg/work/chicco_banner.png"}}" alt="">
+            </div>
             <div class="work-page__info">
-                <h4 class="_h4">Chicco<a target="_blank" href="" class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></a></h4>
+                <h4 class="_h4">
+                    Chicco
+                    <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
+                </h4>
                 <h5>Online store of the leading mobile operator Vodafone Ukraine, which serves more than 19 million subscribers.</h5>
                 <p class="work-page__small-text">Development, integrations, support</p>
-                <a target="_blank" href="" class="work-page__link-desktop _link-www-icon"></a>
+                <i class="work-page__link-desktop _link-www-icon"></i>
             </div>
-        </div>
-        <div class="work-page__row-reverse work-page__last-item">
-            <div class="row-reverse__img work-page__image"><img loading="lazy" src="{{media url="wysiwyg/work/full-bottle-wine-with-copy-space_4_.png"}}" alt=""></div>
+        </a>
+
+        <a class="work-page__row-reverse work-page__last-item" href="https://goodwine.com.ua/" target="_blank">
+            <div class="row-reverse__img work-page__image">
+                <img loading="lazy" src="{{media url="wysiwyg/work/full-bottle-wine-with-copy-space_4_.png"}}" alt="">
+            </div>
             <div class="work-page__info">
-                <h4 class="_h4">Goodwine<a target="_blank" href="" class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></a></h4>
+                <h4 class="_h4">
+                    Goodwine
+                    <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
+                </h4>
                 <h5>official online store of the international<br/> brand under which household appliances and dishes are produced</h5>
                 <p class="work-page__small-text">Development, integrations, support</p>
-                <a target="_blank" href="" class="work-page__link-desktop _link-www-icon"></a>
+                <i class="work-page__link-desktop _link-www-icon"></i>
             </div>
-        </div>
+        </a>
     </div>
 </div>
