--- a/files for admin/services.phtml
+++ b/files for admin/services.phtml
@@ -2,16 +2,16 @@
     <div class="services-page__container _container">
         <div class="service-page__top _grid-3-col">
             <h2 class="services-page__title _sliding-text">
-                <span class="_sliding-text__line">We are a team <br/> </span>
+                <span class="_sliding-text__line">We are a team <br /> </span>
                 <span class="_sliding-text__line">of international experts</span>
-                <span class="_sliding-text__line"> 
+                <span class="_sliding-text__line">
                     united by a
                     <span class="services-page__title services-page__title--orange">single goal</span>
-                </span>                
+                </span>
             </h2>
             <h4 class="services-page__sub-title ">We specialise in creating eCommerce websites. We focus on conversion in balance with your brand. Our websites are future proof, with a solid backend and easy to use content management system. We maintain, update, and support with on-going strategic recommendations from the minute you go-live.</h4>
         </div>
-        
+
         <div class="services-page__squares services-squares" data-mage-init='{"slickServicePage":{}}'>
             <a class="services-squares__square _scrollTo" href="#services-design-section" data-order-mob="1" data-order-desktop="1">
                 <p class="service-squares__text">Web Design <br> for Magento</p>
@@ -23,7 +23,7 @@
                 <p class="service-squares__text">Magento <br> PWA</p>
             </a>
             <a class="services-squares__square _scrollTo" href="#services-optimization-section" data-order-mob="7" data-order-desktop="4">
-                <p class="service-squares__text">Server & Magento <br>  Optimization</p>
+                <p class="service-squares__text">Server & Magento <br> Optimization</p>
             </a>
             <a class="services-squares__square _scrollTo" href="#services-development-section" data-order-mob="2" data-order-desktop="5">
                 <p class="service-squares__text">Magento Development</p>
@@ -40,10 +40,10 @@
             <div class="service-section__body _grid-3-col">
                 <div class="service-section__label _section-label">Design</div>
                 <div class="service-section__content">
-                        <h3 class="service-section__title">Web Design</h3>
-                        <p class="service-section__text"> The full cycle of services to create and launch a website from scratch or redesign a live website along with the modern trends and requirements.</p>
-                        <p class=" service-section__text service-section__text--second-line">We will help you take your online store to the next level with our eCommerce design services. Contact us to learn more about how a good user experience and user interface can impact your online sales.</p>
-                    </div>
+                    <h3 class="service-section__title">Web Design</h3>
+                    <p class="service-section__text"> The full cycle of services to create and launch a website from scratch or redesign a live website along with the modern trends and requirements.</p>
+                    <p class=" service-section__text service-section__text--second-line">We will help you take your online store to the next level with our eCommerce design services. Contact us to learn more about how a good user experience and user interface can impact your online sales.</p>
+                </div>
                 <div class="service-section__image">
                     <img loading="lazy" src="{{media url='wysiwyg/Service/design.png'}}" alt="devolope-image">
                 </div>
@@ -57,10 +57,10 @@
                     <img loading="lazy" src="{{media url='wysiwyg/Service/Development.png'}}" alt="design-image ">
                 </div>
                 <div class="service-section__content">
-                        <h3 class="service-section__title">Magento Development    </h3>
-                        <p class="service-section__text">Magento is a complex platform and requires the right people to maintain it for it to be stable and flexible in the long run. We are here for that.</p>
-                        <p class=" service-section__text service-section__text--second-line">Our Magento certified developers are trained to develop Magento stores with a long-term view on the functionality and maintainability in mind.</p>
-                    </div>
+                    <h3 class="service-section__title">Magento Development </h3>
+                    <p class="service-section__text">Magento is a complex platform and requires the right people to maintain it for it to be stable and flexible in the long run. We are here for that.</p>
+                    <p class=" service-section__text service-section__text--second-line">Our Magento certified developers are trained to develop Magento stores with a long-term view on the functionality and maintainability in mind.</p>
+                </div>
             </div>
         </section>
 
@@ -68,11 +68,11 @@
             <div class="service-section__body _grid-3-col">
                 <div class="service-section__label _section-label">Migration</div>
                 <div class="service-section__content">
-                        <h3 class="service-section__title">Magento 2 <br> Migration</h3>
-                        <p class=" service-section__text">Magento 1 to Magento 2 migration process is perceived to be intimidating by some merchants, resulting in their postponing the procedure indefinitely. Plus, after years of using Magento 1 many grew attached to the familiar features and demonstrated robustness of the platform. </p>
-                    </div>
+                    <h3 class="service-section__title">Magento 2 <br> Migration</h3>
+                    <p class=" service-section__text">Magento 1 to Magento 2 migration process is perceived to be intimidating by some merchants, resulting in their postponing the procedure indefinitely. Plus, after years of using Magento 1 many grew attached to the familiar features and demonstrated robustness of the platform. </p>
+                </div>
                 <div class="service-section__image">
-                    <img loading="lazy" src="{{media url='wysiwyg/Service/migration.png'}}" alt="migration-image ">             
+                    <img loading="lazy" src="{{media url='wysiwyg/Service/migration.png'}}" alt="migration-image ">
                 </div>
             </div>
         </section>
@@ -84,24 +84,24 @@
                     <img loading="lazy" src="{{media url='wysiwyg/Service/pwa.png'}}" alt="migration-image ">
                 </div>
                 <div class="service-section__content">
-                        <h3 class="service-section__title">Magento PWA</h3>
-                        <p class=" service-section__text">Empower your Magento by using Progressive Web Apps thus reaching lightning fast loading times, improved experience on mobile and much more. Our extensive experience with building Magento PWA stores will ensure your headless eCommerce store is ahead of the competition.</p>
-                    </div>
+                    <h3 class="service-section__title">Magento PWA</h3>
+                    <p class=" service-section__text">Empower your Magento by using Progressive Web Apps thus reaching lightning fast loading times, improved experience on mobile and much more. Our extensive experience with building Magento PWA stores will ensure your headless eCommerce store is ahead of the competition.</p>
+                </div>
             </div>
         </section>
 
-        <section id="services-security-section" class="services-page__service-section service-section" >
+        <section id="services-security-section" class="services-page__service-section service-section">
             <div class="service-section__body _grid-3-col">
                 <div class="service-section__label service-section__label--wide _section-label">Security audit</div>
                 <div class="service-section__content">
-                        <h3 class="service-section__title">Magento <br> Security Audit</h3>
-                        <p class=" service-section__text">№1 eCommerce priority covered: be 100% sure the customers’ payment & private information is safe. We will make sure all security flaws won’t be a threat to your store.</p>
-                        <ul class="service-section__list">
-                            <li>Magento patches review</li>
-                            <li>Website malware & security checks</li>
-                            <li>Magento code audit</li>
-                        </ul>
-                    </div>
+                    <h3 class="service-section__title">Magento <br> Security Audit</h3>
+                    <p class=" service-section__text">№1 eCommerce priority covered: be 100% sure the customers’ payment & private information is safe. We will make sure all security flaws won’t be a threat to your store.</p>
+                    <ul class="service-section__list">
+                        <li>Magento patches review</li>
+                        <li>Website malware & security checks</li>
+                        <li>Magento code audit</li>
+                    </ul>
+                </div>
                 <div class="service-section__image">
                     <img loading="lazy" src="{{media url='wysiwyg/Service/Security.png'}}" alt="securety-image ">
                 </div>
@@ -115,10 +115,10 @@
                     <img loading="lazy" src="{{media url='wysiwyg/Service/support.png'}}" alt="support-image">
                 </div>
                 <div class="service-section__content">
-                        <h3 class="service-section__title">Magento Support</h3>
-                        <p class=" service-section__text">We are an agency offering fully managed support and maintenance service for your business with 24/7 availability to ensure your online store improves and grows. Specialized in Magento and offering a vast spectrum of services, our support & maintenance offering is the perfect way to scale your online business.</p>
-                        <p class=" service-section__text service-section__text--second-line">It does not matter if you are from the United States, Australia, China or Europe. We work with different sized eCommerce stores all over the globe.</p>
-                    </div>
+                    <h3 class="service-section__title">Magento Support</h3>
+                    <p class=" service-section__text">We are an agency offering fully managed support and maintenance service for your business with 24/7 availability to ensure your online store improves and grows. Specialized in Magento and offering a vast spectrum of services, our support & maintenance offering is the perfect way to scale your online business.</p>
+                    <p class=" service-section__text service-section__text--second-line">It does not matter if you are from the United States, Australia, China or Europe. We work with different sized eCommerce stores all over the globe.</p>
+                </div>
             </div>
         </section>
 
@@ -126,16 +126,41 @@
             <div class="service-section__body _grid-3-col">
                 <div class="service-section__label  _section-label">Optimization</div>
                 <div class="service-section__content">
-                        <h3 class="service-section__title">Server & Magento Optimization</h3>
-                        <p class=" service-section__text">Fix the low page load time & poor Web Core Vitals metrics for your business growth. Contact us to make the best out of the Magento performance with the help of Adobe certified experts.</p>
-                        <ul class="service-section__list">
-                            <li>Website code improvements</li>
-                            <li>Browser caching & render time boost</li>
-                            <li>Extension data optimization</li>
-                        </ul>
-                    </div>
+                    <h3 class="service-section__title">Server & Magento Optimization</h3>
+                    <p class=" service-section__text">Fix the low page load time & poor Web Core Vitals metrics for your business growth. Contact us to make the best out of the Magento performance with the help of Adobe certified experts.</p>
+                    <ul class="service-section__list">
+                        <li>Website code improvements</li>
+                        <li>Browser caching & render time boost</li>
+                        <li>Extension data optimization</li>
+                    </ul>
+                </div>
                 <div class="service-section__image">
                     <img loading="lazy" src="{{media url='wysiwyg/Service/Frame.png'}}" alt="">
+                </div>
+            </div>
+        </section>
+
+        <section id="services-support-section" class="services-page__service-section service-section">
+            <div class="service-section__body _grid-3-col">
+                <div class="service-section__label _section-label">Analytics</div>
+                <div class="service-section__image">
+                    <img loading="lazy" src="{{media url='wysiwyg/Service/support.png'}}" alt="support-image">
+                </div>
+                <div class="service-section__content">
+                    <h3 class="service-section__title">Implementation Google Analytics 4</h3>
+                    <p class=" service-section__text">
+                        If you are a Magento merchants selling products online and strive to attract new customers or improve your conversion rates, you definitely need Google Analytics 4. It is the instrument to gather as much information as possible about your customers behavior from your website since it is the only layer between your customers and your products.
+                    </p>
+                    <a href="{{store url='blog/implementation-google-analytics-4-on-magento-2-with-gtm.html'}}">
+                        <button type="button" class="service-section__button _button _button--arrow" style="color:#333">
+                            <span class="_button__text">
+                                Discover more </span>
+                            <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px);">
+                                Discover more </span>
+                            <span class="_button__overlay _button__overlay--hover"></span>
+                            <span class="_button__overlay _button__overlay--active"></span>
+                        </button>
+                    </a>
                 </div>
             </div>
         </section>
