little fixes on main page, added ga4 section to services page

--- a/files for admin/main.phtml
+++ b/files for admin/main.phtml
@@ -29,7 +29,7 @@
             </div>
             <div class="main-intro__digits digits-intro">
                 <div class="digits-intro__item">
-                    <div class="digits-intro__number">12</div>
+                    <div class="digits-intro__number">13</div>
                     <div class="digits-intro__text">
                         years <br />of experience
                     </div>
@@ -967,10 +967,10 @@
                             <div class="comment__body">
                                 <div class="comment__author comment-author">
                                     <div class="comment-author__name">
-                                        Basement Books
+                                        Stuart Hutchinson
                                     </div>
                                     <div class="comment-author__post">
-                                        Stuart Hutchinson
+                                        Basement Books
                                     </div>
                                 </div>
 
@@ -988,7 +988,7 @@
                         <div class="comments__arrow comments__arrow--next"></div>
                     </div>
                     <div class="comments__reviews">
-                        <span>4 rewiews</span>
+                        <span></span>
                     </div>
                 </div>
             </div>
