--- a/files for admin/services.phtml
+++ b/files for admin/services.phtml
@@ -127,7 +127,7 @@
                 <div class="service-section__label  _section-label">Optimization</div>
                 <div class="service-section__content">
                     <h3 class="service-section__title">Server & Magento Optimization</h3>
-                    <p class=" service-section__text">Fix the low page load time & poor Web Core Vitals metrics for your business growth. Contact us to make the best out of the Magento performance with the help of Adobe certified experts.</p>
+                    <p class=" service-section__text">Fix the low page load time & poor Core Web Vitals metrics for your business growth. Contact us to make the best out of the Magento performance with the help of Adobe certified experts.</p>
                     <ul class="service-section__list">
                         <li>Website code improvements</li>
                         <li>Browser caching & render time boost</li>
@@ -144,7 +144,7 @@
             <div class="service-section__body _grid-3-col">
                 <div class="service-section__label _section-label">Analytics</div>
                 <div class="service-section__image">
-                    <img loading="lazy" src="{{media url='wysiwyg/Service/support.png'}}" alt="support-image">
+                    <img src="https://new.perspective.net.ua/media/wysiwyg/Service/services-ga4.svg" alt="analytics" />
                 </div>
                 <div class="service-section__content">
                     <h3 class="service-section__title">Implementation Google Analytics 4</h3>
@@ -162,6 +162,16 @@
                         </button>
                     </a>
                 </div>
+                <a class="service-section__mobile" href="{{store url='blog/implementation-google-analytics-4-on-magento-2-with-gtm.html'}}">
+                    <button type="button" class="service-section__mobile-button _button _button--arrow" style="color:#333">
+                        <span class="_button__text">
+                            Discover more </span>
+                        <span class="_button__text-overlay" style="clip: rect(0px, 0px, 24px, 0px);">
+                            Discover more </span>
+                        <span class="_button__overlay _button__overlay--hover"></span>
+                        <span class="_button__overlay _button__overlay--active"></span>
+                    </button>
+                </a>
             </div>
         </section>
 
