some fixes in links paths on services page

--- a/files for admin/services.phtml
+++ b/files for admin/services.phtml
@@ -151,7 +151,7 @@
                     <p class=" service-section__text">
                         If you are a Magento merchants selling products online and strive to attract new customers or improve your conversion rates, you definitely need Google Analytics 4. It is the instrument to gather as much information as possible about your customers behavior from your website since it is the only layer between your customers and your products.
                     </p>
-                    <a href="{{store url='blog/implementation-google-analytics-4-on-magento-2-with-gtm.html'}}">
+                    <a href="{{store url='services/implementation-google-analytics-4-on-magento-2-with-gtm'}}">
                         <button type="button" class="service-section__button _button _button--arrow" style="color:#333">
                             <span class="_button__text">
                                 Discover more </span>
@@ -162,7 +162,7 @@
                         </button>
                     </a>
                 </div>
-                <a class="service-section__mobile" href="{{store url='blog/implementation-google-analytics-4-on-magento-2-with-gtm.html'}}">
+                <a class="service-section__mobile" href="{{store url='services/implementation-google-analytics-4-on-magento-2-with-gtm'}}">
                     <button type="button" class="service-section__mobile-button _button _button--arrow" style="color:#333">
                         <span class="_button__text">
                             Discover more </span>
