content changes on main page

--- a/files for admin/main.phtml
+++ b/files for admin/main.phtml
@@ -1017,6 +1017,20 @@
 
                         <li class="adobe-achievments__item">
                             <div class="adobe-achievments__image">
+                                <img loading="lazy" src="{{media url='wysiwyg/Main/Adobe_Certified_Professional_Experience_Cloud_products_Digital_Badge.png'}}" alt="" />
+                            </div>
+                            <div class="adobe-achievments__body">
+                                <div class="adobe-achievments__name">
+                                    Adobe Certified Professional
+                                </div>
+                                <div class="adobe-achievments__text">
+                                    Back-end Developer
+                                </div>
+                            </div>
+                        </li>
+
+                        <li class="adobe-achievments__item">
+                            <div class="adobe-achievments__image">
                                 <img loading="lazy" src="{{media url='wysiwyg/Main/Adobe_Certified_Expert.png'}}" alt="" />
                             </div>
                             <div class="adobe-achievments__body">
@@ -1024,7 +1038,9 @@
                                     Adobe Certified Expert
                                 </div>
                                 <div class="adobe-achievments__text">
-                                    Business Practitioner Developer
+                                    Front-end Developer<br/>
+                                    Back-end Developer<br/>
+                                    Business Practitioner 
                                 </div>
                             </div>
                         </li>
@@ -1038,21 +1054,7 @@
                                     Adobe Certified Master
                                 </div>
                                 <div class="adobe-achievments__text">
-                                    Business Practitioner Developer
-                                </div>
-                            </div>
-                        </li>
-
-                        <li class="adobe-achievments__item">
-                            <div class="adobe-achievments__image">
-                                <img loading="lazy" src="{{media url='wysiwyg/Main/Adobe_Certified_Professional_Experience_Cloud_products_Digital_Badge.png'}}" alt="" />
-                            </div>
-                            <div class="adobe-achievments__body">
-                                <div class="adobe-achievments__name">
-                                    Adobe Certified Professional
-                                </div>
-                                <div class="adobe-achievments__text">
-                                    Business Practitioner Developer
+                                    Architect
                                 </div>
                             </div>
                         </li>
