added ga4 service square

--- a/files for admin/services.phtml
+++ b/files for admin/services.phtml
@@ -34,6 +34,9 @@
             <a class="services-squares__square _scrollTo" href="#services-support-section" data-order-mob="6" data-order-desktop="7">
                 <p class="service-squares__text">Magento <br> Support</p>
             </a>
+            <a class="services-squares__square _scrollTo" href="#services-ga4-section" data-order-mob="8" data-order-desktop="8">
+                <p class="service-squares__text">Implementation<br>Google Analytics 4</p>
+            </a>
         </div>
 
         <section id="services-design-section" class="services-page__service-section service-section">
@@ -140,11 +143,11 @@
             </div>
         </section>
 
-        <section id="services-support-section" class="services-page__service-section service-section">
+        <section id="services-ga4-section" class="services-page__service-section service-section">
             <div class="service-section__body _grid-3-col">
                 <div class="service-section__label _section-label">Analytics</div>
                 <div class="service-section__image">
-                    <img src="https://new.perspective.net.ua/media/wysiwyg/Service/services-ga4.svg" alt="analytics" />
+                    <img src="{{media url='wysiwyg/Service/services-ga4.svg'}}" alt="analytics" />
                 </div>
                 <div class="service-section__content">
                     <h3 class="service-section__title">Implementation Google Analytics 4</h3>
