--- a/files for admin/company.phtml
+++ b/files for admin/company.phtml
@@ -4,7 +4,7 @@
             <h2 class="company-page__title">We are a team of international experts united by a <span class="company-page__title--orange">single goal</span></h2>
             <h4 class="company-page__sub-title _text-align-right">We help to make money on the Internet, as well as contributes to business development by introducing IT innovations into them.</h4>
             <div class="company-page__image">
-                <img loading="lazy" src="{{media url='wysiwyg/company/background-about.png'}}" alt="sec">
+                <img loading="." src="{{media url='wysiwyg/company/background-about.png'}}" alt="sec">
             </div>
             <div class="company-page__squares company-squares">
                 <div class="company-squares__text _text-align-right">
