changes in cms content for pagespeed optimize

--- a/files for admin/main.phtml
+++ b/files for admin/main.phtml
@@ -280,9 +280,9 @@
                             </label>
                             <div class="integration-cards__images integrations-logo">
                                 <div class="integrations-logo__row">
-                                    <img loading="lazy" src="{{media url='wysiwyg/Main/logos/headless/gatsby-inc-vector-logo_2.svg'}}" alt="hover" />
-                                    <img loading="lazy" src="{{media url='wysiwyg/Main/logos/headless/PWA_logo_3.svg'}}" alt="hover" />
-                                    <img loading="lazy" src="{{media url='wysiwyg/Main/logos/headless/Logo.f339de60_2.svg'}}" alt="hover" />
+                                    <img loading="lazy" height="27px" width="113px" src="{{media url='wysiwyg/Main/logos/headless/gatsby-inc-vector-logo_2.svg'}}" alt="hover" />
+                                    <img loading="lazy" height="34px" width="59px" src="{{media url='wysiwyg/Main/logos/headless/PWA_logo_3.svg'}}" alt="hover" />
+                                    <img loading="lazy" height="41px" width="104px" src="{{media url='wysiwyg/Main/logos/headless/Logo.f339de60_2.svg'}}" alt="hover" />
                                 </div>
                                 <div class="integrations-logo__row">
                                     <img loading="lazy" src="{{media url='wysiwyg/Main/logos/headless/storyblok-logo.svg'}}" alt="hover" />
