--- a/files for admin/works.phtml
+++ b/files for admin/works.phtml
@@ -1,11 +1,11 @@
 <div class="work-page">
     <div class="work-page__container _container">
-        <h2 class="work-page__title">best-in-class <br/> eCommerce solutions</h2>
-        <h4 class="work-page__sub-title">Our passion lies in making complex things simple. We design and build websites,<br/> e-commerce stores for some of the largest organisations in the world.</h4>
-        
+        <h2 class="work-page__title">best-in-class <br /> eCommerce solutions</h2>
+        <h4 class="work-page__sub-title">Our passion lies in making complex things simple. We design and build websites,<br /> e-commerce stores for some of the largest organisations in the world.</h4>
+
         <a class="work-page__row" href="https://www.vodafone.ua/shop/" target="_blank">
             <div class="row__img work-page__image">
-                <img loading="lazy" src="{{media url="wysiwyg/work/vodafone_banner.png"}}" alt="">
+                <img loading="eager" src="{{media url="wysiwyg/work/vodafone_banner.png"}}" alt="">
             </div>
             <div class="work-page__info">
                 <h4 class="_h4">
@@ -20,7 +20,7 @@
 
         <a class="work-page__dual-top" href="https://www.ortlieb.com/" target="_blank">
             <div class="dual-top__img work-page__image">
-                <img loading="lazy" src="{{media url="wysiwyg/work/ortileb_banner.png"}}" alt="">
+                <img loading="eager" src="{{media url="wysiwyg/work/ortileb_banner.png"}}" alt="">
             </div>
             <div class="work-page__info">
                 <h4 class="_h4">
@@ -55,11 +55,11 @@
             <div class="work-page__info">
                 <h4 class="_h4">
                     Tefal
-                    <i  class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
+                    <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
                 </h4>
                 <h5>official online store of the international brand under which household appliances and dishes are produced</h5>
                 <p class="work-page__small-text">Design, development, integrations, support</p>
-                <i  class="work-page__link-desktop _link-www-icon"></i>
+                <i class="work-page__link-desktop _link-www-icon"></i>
             </div>
         </a>
 
@@ -147,7 +147,7 @@
                     Goodwine
                     <i class="work-page__link-mobile _link-www-icon _link-www-icon--mobile"></i>
                 </h4>
-                <h5>official online store of the international<br/> brand under which household appliances and dishes are produced</h5>
+                <h5>official online store of the international<br /> brand under which household appliances and dishes are produced</h5>
                 <p class="work-page__small-text">Development, integrations, support</p>
                 <i class="work-page__link-desktop _link-www-icon"></i>
             </div>
